--- a/indexboot.html
+++ b/indexboot.html
@@ -3,9 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Boot</title>
+    <link rel="stylesheet" href="librarys/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="librarys/bootstrap-icons/font/bootstrap-icons.css">
+
+    <title>Oliva</title>
 </head>
 <body>
     
+
+<script src="librarys/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
