adds style to m-5 class-I moved better position.

--- a/indexboot.html
+++ b/indexboot.html
@@ -15,11 +15,13 @@
         src: url(image-project/Lobster/Lobster-Regular.ttf);
 
     }
+
     @font-face {
         font-family: rubiks;
         src: url(image-project/Rubik/Rubik-VariableFont_wght.ttf);
-        
+
     }
+
     * {
         padding: 0;
         margin: 0;
@@ -27,7 +29,7 @@
     }
 
     .navbar-brand {
-        font-size:2.5rem;
+        font-size: 2.5rem;
         color: black;
         font-family: "Lobster", sans-serif;
     }
@@ -41,7 +43,7 @@
         margin-left: 10px;
         color: rgb(128, 128, 128);
         text-transform: uppercase;
-        font-family: 'rubik',  sans-serif;
+        font-family: 'rubik', sans-serif;
 
     }
 
@@ -55,8 +57,8 @@
         width: 80%;
         border-radius: 20px;
         border: 2px solid #d01117;
-        margin-right: -85px; 
-        font-family: 'rubik',  sans-serif;
+        margin-right: -85px;
+        font-family: 'rubik', sans-serif;
     }
 
     .btn {
@@ -69,31 +71,38 @@
         border-radius: 30px;
 
     }
-    .main{
+
+    .main {
         background: url(image-project/top-view-vegetables-with-copy-space.jpg) no-repeat;
         background-size: cover;
         height: 100vh;
         background-position: 50% 50%;
         width: 100%;
     }
-    .main h1{
 
+    .main h1 {
         font-size: 4rem;
         font-weight: 700;
-        color:white;
+        color: white;
     }
-    .olive-name{
+
+    .olive-name {
         font-family: "Lobster", sans-serif;
+        text-shadow: -3px 4px 2px #555;
     }
-    .btn1{
+
+    .btn1 {
         height: 45px;
         width: 35%;
         border: none;
         outline: none;
-        background-color:#d01117 ;
+        background-color: #d01117;
         color: white;
-        font-weight: 700;
         border-radius: 60px;
+    }
+
+    .m-5 {
+        margin: 10rem 10rem 8rem 15rem !important;
     }
 </style>
 
@@ -135,17 +144,37 @@
     </nav>
 
     <section class="main">
-        <div class="container py-5">
+        <div class="container py-5 ">
             <div class="row py-5">
-                <div style="padding-top:10rem;
-                padding-left: 18rem;" class="col-lg-7 pt-20">
-                    <h1>Organic is better life, <b class="olive-name">Oliva</b>  is more life. </h1>
+                <div class="col-lg-7 m-5 pt-5 text-center">
+                    <h1 class="pt-5">Organic is better life, <b class="olive-name ">Oliva</b> is more life. </h1>
                     <button class="btn1 mt-3">More Tips</button>
                 </div>
             </div>
         </div>
     </section>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
+    <br><br><br><br><br><br><br><br><br><br><br>
     <script src="librarys/bootstrap/js/bootstrap.bundle.min.js"></script>
 </body>
 
