--- a/indexboot.html
+++ b/indexboot.html
@@ -158,6 +158,29 @@
         </div>
     </section>
 
+    <!-- items  -->
+    <section class="new">
+        <div class="container py-5">
+            <div class="row pt-5">
+                <div class="col-lg-7 m-auto">
+                    <div class="row text-center">
+                        <div class="col-lg-4 ">
+                            <img src="image-project/save-nature.png" class="img-fluid pb-4"  alt="">
+                            <h6>NATURAL</h6>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="image-project/organic.png" class="img-fluid pb-4"  alt="">
+                            <h6>ORGANIC</h6>
+                        </div>
+                        <div class="col-lg-4">
+                            <img src="image-project/planet-earth.png" class="img-fluid pb-4"   alt="">
+                            <h6>HEALTH</h6>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
