adds product section

--- a/indexboot.html
+++ b/indexboot.html
@@ -90,9 +90,11 @@
         font-family: "Lobster", sans-serif;
         text-shadow: -3px 4px 2px #555;
     }
+
     .m-5 {
         margin: 10rem 10rem 8rem 15rem !important;
     }
+
     .btn1 {
         height: 45px;
         width: 35%;
@@ -102,11 +104,20 @@
         color: white;
         border-radius: 60px;
     }
-    .btn1:hover{
-        background-color:red;
+
+    .btn1:hover {
+        background-color: red;
+        transition: 0.5s;
     }
-    .colorfocus:focus{
+
+    .colorfocus:focus {
         border-color: darkgreen;
+    }
+
+    .card:hover {
+        box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
+        -webkit-box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
+        -moz-box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
     }
 </style>
 
@@ -165,15 +176,15 @@
                 <div class="col-lg-7 m-auto">
                     <div class="row text-center">
                         <div class="col-lg-4 ">
-                            <img src="image-project/save-nature.png" class="img-fluid pb-4"  alt="">
+                            <img src="image-project/save-nature.png" class="img-fluid pb-4" alt="">
                             <h6>NATURAL</h6>
                         </div>
                         <div class="col-lg-4">
-                            <img src="image-project/organic.png" class="img-fluid pb-4"  alt="">
+                            <img src="image-project/organic.png" class="img-fluid pb-4" alt="">
                             <h6>ORGANIC</h6>
                         </div>
                         <div class="col-lg-4">
-                            <img src="image-project/planet-earth.png" class="img-fluid pb-4"   alt="">
+                            <img src="image-project/planet-earth.png" class="img-fluid pb-4" alt="">
                             <h6>HEALTH</h6>
                         </div>
                     </div>
@@ -182,7 +193,64 @@
         </div>
     </section>
 
-
+    <!-- product  -->
+    <section class="product">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-lg-5 m-auto text-center">
+                    <h1>What's Trending</h1>
+                    <h6 style="color:red;">Be healthy organic oliva food!</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-3 text-center">
+                    <div class="card border-0 bg-light mb-2">
+                        <div class="card-body">
+                            <img src="image-project/high-angle-oranges-with-burlap-marmalade-jar.jpg" class="img-fluid"
+                                alt="">
+                        </div>
+                    </div>
+                    <h6>Fresh organic oranges</h6>
+                    <p>$59.99</p>
+                </div>
+                <div class="col-lg-3 text-center">
+                    <div class="card border-0 bg-light mb-2">
+                        <div class="card-body">
+                            <img src="image-project/glass-green-apple-healthy-smoothie-put-fresh-green-apples.jpg "
+                                class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <h6>Combination of apples and vegetables </h6>
+                    <p>$69.99</p>
+                </div>
+                <div class="col-lg-3 text-center">
+                    <div class="card border-0 bg-light mb-2">
+                        <div class="card-body">
+                            <img src="image-project/herbal-medicine-with-plants-blocks-assortment.jpg" class="img-fluid"
+                                alt="">
+                        </div>
+                    </div>
+                    <h6>Organic olive</h6>
+                    <p>$59.99</p>
+                </div>
+                <div class="col-lg-3 text-center">
+                    <div class="card border-0 bg-light mb-2">
+                        <div class="card-body">
+                            <img src="image-project/top-view-open-glass-bottle-cup-filled-with-milk-spoon-walnut-left-side-ice-background.jpg"
+                                class="img-fluid" alt="">
+                        </div>
+                    </div>
+                    <h6>Organic Milk</h6>
+                    <p>$39.99</p>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-6 text-center m-auto">
+                    <button class="btn1">Click For More</button>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
