adds about-shop more section

--- a/indexboot.html
+++ b/indexboot.html
@@ -194,7 +194,7 @@
     </section>
 
     <!-- product  -->
-    <section class="product">
+    <section class="product trending1">
         <div class="container py-5">
             <div class="row py-5">
                 <div class="col-lg-5 m-auto text-center">
@@ -252,6 +252,41 @@
         </div>
     </section>
 
+
+    <!-- about shop more  -->
+    <section class="about">
+        <div class="container py-5">
+            <div class="row py-5">
+                <div class="col-lg-8 m-auto text-center">
+                    <h1>Welcome to our organic food socianty</h1>
+                    <h6 style="color: red;">Be healthy organic food</h6>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-lg-4">
+                    <img src="image-project/woman-holding-bowl-with-lemons.jpg" class="img-fluid mb-3" alt="">
+                    <h5>Best Quality Product</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, voluptates.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="image-project/fruitgirl.jpg" class="img-fluid mb-3" alt="">
+                    <h5>Best Quality Product</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, voluptates.</p>
+                </div>
+                <div class="col-lg-4">
+                    <img src="image-project/fruitfeel.jpg" class="img-fluid mb-3" alt="">
+                    <h5>Best Quality Product</h5>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus, voluptates.</p>
+                </div>
+                <div class="row pt-4">
+                    <div class="col-lg-6 text-center m-auto">
+                        <button class="btn1">Shop More</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
 
 
 
