--- a/indexboot.html
+++ b/indexboot.html
@@ -119,6 +119,12 @@
         -webkit-box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
         -moz-box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
     }
+    .apple{
+        background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(image-project/fruitwoman.jpg) no-repeat;
+        background-size: cover;
+        height: 80vh;
+        width: 100%;
+}
 </style>
 
 <body>
@@ -287,6 +293,18 @@
             </div>
         </div>
     </section>
+
+    <div class="apple py-5">
+        <div class="container py-5 ">
+            <div class="row py-5">
+                <div class="col-lg-6">
+                    <h1 class="font-weight-bold py-4">Unlock Your Potential with Good Nutrition.</h1>
+                    <h6>Be healthy Organic Food</h6>
+                    <button class="btn1 mt-3">More Form Us</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
 
 
