adds about section

--- a/indexboot.html
+++ b/indexboot.html
@@ -119,12 +119,17 @@
         -webkit-box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
         -moz-box-shadow: -7px -5px 16px 1px rgba(0, 0, 0, 0.7);
     }
-    .apple{
-        background:linear-gradient(rgba(0,0,0,0.2),rgba(0,0,0,0.2)), url(image-project/fruitwoman.jpg) no-repeat;
+
+    .apple {
+        background: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.2)), url(image-project/fruitwoman.jpg) no-repeat;
         background-size: cover;
         height: 80vh;
         width: 100%;
-}
+    }
+
+    .apple h1 ,  .apple h6 {
+        font-family:lobster;
+    }
 </style>
 
 <body>
@@ -294,6 +299,7 @@
         </div>
     </section>
 
+
     <div class="apple py-5">
         <div class="container py-5 ">
             <div class="row py-5">
@@ -306,9 +312,53 @@
         </div>
     </div>
 
+<!-- contact  -->
+<section class="contact">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-5 m-auto text-center">
+                <h1>Contact Us</h1>
+                <h6 style="color: red;">Always Be In Touch With Us</h6>
+            </div>
+        </div>
 
+        <div class="row py-5">
+            <div class="col-lg-9 m-auto">
+                <div class="row">
 
+                    <div class="col-lg-4">
+                        <h6>LACATION</h6>
+                        <p>Iran, Maku . Sattarkhan </p>
+                   
+                        <h6>PHONE</h6>
+                        <p>044342-1098765</p>
+                   
+                        <h6>EMAIL</h6>
+                        <p>Mahsasoleimanzadeg@gmail.com </p>
+                    </div>
 
+                    <div class="col-lg-7">
+                        <div class="row">
+                            <div class="col-lg-6">
+                                <input type="text" class="form-control bg-light" placeholder="First Name">
+                            </div>
+                            <div class="col-lg-6">
+                                <input type="text" class="form-control bg-light" placeholder="Last Name">
+                            </div>
+                        </div>
+                        <div class="row">
+                            <div class="col-lg-12 py-3">
+                                <textarea name="" class="form-control bg-light" placeholder="Enter your Topic and Text" id="" cols="10" rows="5"></textarea>
+                            </div>
+                        </div>
+                        <button class="btn1">Submit</button>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
