adds news section -Except icons

--- a/indexboot.html
+++ b/indexboot.html
@@ -130,6 +130,34 @@
     .apple h1 ,  .apple h6 {
         font-family:lobster;
     }
+    .news{
+        background-color: black;
+        color: white;
+
+    }
+    .btn2{
+        height: 45px;
+        width: 100px;
+        background-color: white;
+        margin-left: -10px;
+        border: 2px solid white;
+    }
+    .news input{
+        height: 45px;
+        width: 55%;
+        border: 2px solid white;
+        outline: none;
+        background-color: black;
+        color: white;
+        margin-top: 20px;
+        padding-left: 15PX;
+    }
+    .news:placeholder {
+        color: white;
+    }
+    .news p{
+        margin: 0;
+    }
 </style>
 
 <body>
@@ -360,6 +388,52 @@
     </div>
 </section>
 
+<section class="news py-5">
+    <div class="container py-5">
+        <div class="row">
+            <div class="col-lg-9 m-auto text-center">
+                <h1 class="pb-3">Join Our</h1>
+                <input type="text" placeholder="Enter your email">
+                <button class="btn2">Submit</button>
+            </div>
+        </div>
+
+        <div class="row">
+            <div class="col-lg-11">
+                <div class="row">
+                    <div class="col-lg-3 py-3">
+                        <h5 class="pb-3">Customize</h5>
+                        <p>regular</p>
+                        <p>onTime </p>
+                        <p>Always Care</p>
+                    </div>
+
+                    <div class="col-lg-3 py-3">
+                        <h5 class="pb-3">Customize</h5>
+                        <p>regular</p>
+                        <p>onTime </p>
+                        <p>Always Care</p>
+                    </div>
+
+                    <div class="col-lg-3 py-3">
+                        <h5 class="pb-3">Customize</h5>
+                        <p>regular</p>
+                        <p>onTime </p>
+                        <p>Always Care</p>
+                    </div>
+
+                    <div class="col-lg-3 py-3">
+                        <h5 class="pb-3">Customize</h5>
+                        <span><i class="fab fa-facebook" ></i></span>
+                        <span><i class="fab fa-instagram" ></i></span>
+                        <span><i class="fab fa-twitter" ></i></span>
+                        <span><i class="fab fa-google-plus" ></i></span>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 
 
 
